--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -68,7 +68,7 @@
 			
 			<div class="column-header">
 				<span class="col select-col">
-					<input type="checkbox"/>
+					<input type="checkbox" ng-model="documentMgr.allChecked" ng-click="documentMgr.checkAll()"/>
 				</span>
 
 				<div class="fb-col-group">
@@ -97,13 +97,13 @@
 					<div class="empty-directory-msg" ng-if="documentMgr.currentDirs.length == 0 && documentMgr.currentFiles.length == 0">This folder is empty.</div>
 
 					<ul>
-						<li class="fb-list-item" ng-class="{'selected': documentMgr.selectedDirIndex(doc) > -1}" ng-repeat="doc in documentMgr.currentDirs">
+						<li class="fb-list-item" ng-class="{'selected': doc.selected}" ng-repeat="doc in documentMgr.currentDirs">
 							<span class="col select-col">
-								<input type="checkbox"/>
+								<input type="checkbox" ng-model="doc.selected" ng-click="documentMgr.checkDir(doc)"/>
 							</span>
 							<span class="fb-col-group"  
-								ng-click="$event.originalEvent.dropdown || documentMgr.toggleDir(doc)" 
-								ng-dblclick="documentMgr.selectNode(doc.model.id)">
+								ng-click="$event.originalEvent.dropdown || documentMgr.selectDir(doc)"
+								ng-dblclick="$event.originalEvent.dropdown || documentMgr.openDir(doc)">
 								<span class="col name-col">
 									<span class="avatar">
 										<span class="fb-folder glyphicon glyphicon-folder-close"></span>
@@ -155,12 +155,12 @@
 						</li>
 					</ul>
 					<ul>
-						<li class="fb-list-item" ng-class="{'selected': documentMgr.selectedFileIndex(doc) > -1}" ng-repeat="doc in documentMgr.currentFiles">
+						<li class="fb-list-item" ng-class="{'selected': doc.selected}" ng-repeat="doc in documentMgr.currentFiles">
 							<span class="col select-col">
-								<input type="checkbox"/>
+								<input type="checkbox" ng-model="doc.selected" ng-click="documentMgr.checkFile(doc)"/>
 							</span>
 							<span class="fb-col-group"
-								ng-click="$event.originalEvent.dropdown || documentMgr.toggleFile(doc)">
+								ng-click="$event.originalEvent.dropdown || documentMgr.selectFile(doc)">
 								<span class="col name-col">
 									<span class="avatar">
 										<span class="fb-file glyphicon glyphicon-file" ng-if="doc.internalExt == 'pdf'"></span>
