MEM-164 - Documents UI Development
- fixed an issued with incorrect selector naming conventions on row items

--- a/modules/documents/client/views/document-manager-upload.html
+++ b/modules/documents/client/views/document-manager-upload.html
@@ -42,8 +42,8 @@
 				</div>
 				
 				<ul ng-if="uploadService.fileList != 0">
-					<li ng-class="{'has-error': f.failed}" ng-repeat="f in uploadService.fileList">
-						<span class="cell-contents">							
+					<li class="fb-list-item" ng-class="{'has-error': f.failed}" ng-repeat="f in uploadService.fileList">
+						<span class="fb-col-group">							
 							<span class="col name-col">
 								<span class="avatar">
 									<span class="fb-success glyphicon glyphicon-ok" ng-if="f.uploaded"></span>
