--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -33,15 +33,15 @@
 
 			<button class="btn icon-btn" title="Rename Folder" 
 					ng-if="project.userCan.createDocument"
-					ng-disabled="documentMgr.selectedDirs.length === 0"
+					ng-disabled="documentMgr.checkedDirs.length !== 1"
 					x-document-mgr-rename-folder
 					x-project="project"
 					x-root="documentMgr.rootNode"
-					x-node="documentMgr.selectedDirs[0]"><span class="glyphicon glyphicon-pencil"></span></button>
+					x-node="documentMgr.checkedDirs[0]"><span class="glyphicon glyphicon-pencil"></span></button>
 
 			<button class="btn icon-btn" title="Delete" 
 					ng-if="project.userCan.createDocument"
-					ng-disabled="documentMgr.selectedDirs.length === 0 && documentMgr.selectedFiles.length === 0"
+					ng-disabled="documentMgr.checkedDirs.length === 0 && documentMgr.checkedFiles.length === 0"
 					x-confirm-dialog
 					x-title-text="documentMgr.deleteSelected.titleText"
 					x-ok-text="documentMgr.deleteSelected.okText"
@@ -52,7 +52,7 @@
 		</div>
 	</div>
 
-	<div id="fbBody" class="fb-body" ng-class="{'panel-open': documentMgr.infoPanel.enabled && documentMgr.infoPanel.open}">
+	<div id="fbBody" class="fb-body" ng-class="{'panel-open': documentMgr.infoPanel.open}">
 
 		<div class="fb-list">
 
@@ -115,13 +115,13 @@
 								<span class="col date-added-col">---</span>
 								<div class="row-actions">
 									
-									<div class="btn-group">
+									<div class="btn-group" ng-if="doc.model.id === documentMgr.lastChecked.directoryID">
 										<button class="btn icon-btn dropdown-toggle" type="button" ng-click="$event.originalEvent.dropdown = true" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-											<span class="glyphicon glyphicon glyphicon-option-vertical"></span>	
+											<span class="glyphicon glyphicon glyphicon-option-vertical"></span>
 										</button>
 										<ul class="dropdown-menu pull-right">
 											<li>
-												<button class="btn icon-btn" title="Toggle Details" ng-click="documentMgr.infoPanel.toggle(); $event.stopPropagation();">
+												<button class="btn icon-btn" title="Toggle Details" ng-click="documentMgr.infoPanel.toggle();$event.stopPropagation();">
 													<span class="glyphicon glyphicon-info-sign"></span>
 												</button>
 											</li>
@@ -133,7 +133,7 @@
 														x-cancel-text="'No'"
 														x-confirm-text="'Are you sure you want to delete this folder? This action cannot be undone.'"
 														x-confirm-items="[doc.model.name]"
-														x-on-ok="documentMgr.deleteFolder"
+														x-on-ok="documentMgr.deleteDir"
 												        x-ok-args="doc">
 													<span class="glyphicon glyphicon-trash"></span>
 												</button>
@@ -171,20 +171,20 @@
 								<span class="col size-col">{{ doc.internalSize | bytes:2 }}</span>
 								<span class="col type-col">{{ doc.internalExt}}</span>
 								<span class="col date-added-col">{{ doc.dateUploaded | date : format : timezone }}</span>
-								<div class="row-actions">
+								<div class="row-actions" ng-if="doc._id.toString() === documentMgr.lastChecked.fileId">
 									
 									<div class="btn-group">
 										<button class="btn icon-btn dropdown-toggle" type="button" ng-click="$event.originalEvent.dropdown = true" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-											<span class="glyphicon glyphicon glyphicon-option-vertical"></span>	
+											<span class="glyphicon glyphicon glyphicon-option-vertical" ></span>
 										</button>
 										<ul class="dropdown-menu pull-right">
 											<li>
-												<button class="btn icon-btn" title="Toggle Details" ng-click="documentMgr.infoPanel.toggle()">
+												<button class="btn icon-btn" title="Toggle Details" ng-click="documentMgr.infoPanel.toggle();$event.stopPropagation();">
 													<span class="glyphicon glyphicon-info-sign"></span>
 												</button>
 											</li>
 											<li>
-												<button class="btn icon-btn" title="Delete File"
+												<button class="btn icon-btn" title="Delete File" ng-click="$event.stopPropagation();"
 														x-confirm-dialog
 														x-title-text="'Delete File'"
 														x-ok-text="'Yes'"
@@ -285,6 +285,17 @@
 					<!-- TBD -->
 				</div>
 			</div>
+			<div class="fb-details-content" ng-if="documentMgr.infoPanel.data && documentMgr.infoPanel.type === 'Multi'">
+				<div class="title-panel">
+					<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h2>{{project.name}}</h2>
+				</div>
+				<div class="scroll-container">
+					There are {{documentMgr.infoPanel.data.checkedFiles}} files and {{documentMgr.infoPanel.data.checkedDirs}} folders selected.<br>Select one file or folder to view details.
+				</div>
+			</div>
 			<div class="fb-details-content" ng-if="!documentMgr.infoPanel.data || documentMgr.infoPanel.type === 'None'">
 				<div class="title-panel">
 					<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
@@ -293,7 +304,7 @@
 					<h2>{{project.name}}</h2>
 				</div>
 				<div class="scroll-container">
-					Select a file or folder to view details.
+					Select one file or folder to view details.
 				</div>
 			</div>
 		</div>
