--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -105,49 +105,6 @@ $list-selected-border: 1px solid #4187c9;
 }
 
 
-/* CHECKBOX COL */
-.col.checkbox-col {
-    @include flex(0 0 4rem);
-    position: relative;
-    text-align: center;
-    border-right: $fb-border;
-
-    label {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        margin: 0;
-
-        span {
-            margin-top: 1.4rem;
-            opacity: 0.2;
-            visibility: hidden;
-        }
-    }
-
-    input[type='checkbox'] {
-        opacity: 0;
-
-        &:focus {
-            + label {
-                background: #EEE;
-            }
-        }
-    }
-
-    input[type='checkbox']:checked {
-        + label {
-            span {
-                opacity: 1;
-                visibility: visible;
-            }
-        }
-    }
-}
-
-
 /* FILE BROWSER */
 .file-browser {
     @include flexbox();
@@ -350,10 +307,6 @@ $list-selected-border: 1px solid #4187c9;
             background: $list-selected-bg;
             border-bottom: $list-selected-border;
 
-            .col.checkbox-col {
-                border-right: $list-selected-border;
-            }
-
             .btn:focus,
             .btn:hover {
                 background: transparent;
@@ -421,6 +374,14 @@ $list-selected-border: 1px solid #4187c9;
                     border-width: 0 5px 5px 5px;
                     border-color: transparent transparent #494949 transparent;
                 }
+            }
+        }
+
+        .checkbox-col {
+            .glyphicon {
+                margin-top: 1rem;
+                font-size: 1.2rem;
+                visibility: visible;
             }
         }
     }
@@ -561,6 +522,115 @@ $list-selected-border: 1px solid #4187c9;
     }
 }
 
+/* COLUMNS */
+span.avatar {
+    @include flex(0 0 3rem);
+}
+
+.col.name-col {
+    @include flex(1 1 auto);
+}
+
+.col.size-col{
+    @include flex(0 0 18%)
+}
+
+.col.type-col {
+    @include flex(0 0 13%)
+}
+
+.col.date-added-col {
+    @include flex(0 0 22%);
+}
+
+@media (min-width: 1200px) {
+    .col.size-col{
+        @include flex(0 0 20%)
+    }
+
+    .col.type-col{
+        @include flex(0 0 17%)
+    }
+    
+    .col.date-added-col {
+        @include flex(0 0 20%)
+    }
+}
+
+/* CHECKBOX COL */
+.col.checkbox-col {
+    @include flex(0 0 auto);
+    width: 4rem;
+    position: relative;
+    padding: 0;
+    text-align: center;
+    border-right: $fb-border;
+
+    label {
+        span {
+            font-size: 1.2rem;
+            margin-top: 1.4rem;
+            visibility: hidden;
+        }
+    }
+
+    input[type='checkbox'],
+    label {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        margin: 0; 
+        width: 100%;
+        height: 100%;
+    }
+
+    input[type='checkbox'] {
+        margin: 0;
+        opacity: 0;
+        z-index: 2;
+
+        &:hover,
+        &:focus {
+            + label {
+                background: #EEE;
+
+                span {
+                    opacity: 0.2rem;
+                    visibility: visible;
+                }
+            }
+        }
+    }
+
+    input[type='checkbox']:checked {
+        + label {
+            span {
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+    }
+}
+
+.selected {
+    .col.checkbox-col {
+        border-right: $list-selected-border;
+
+        input[type='checkbox'] {
+            &:hover,
+            &:focus {
+                + label {
+                    background: $list-selected-hover-bg;
+                }
+            }
+        }
+    }
+}
+
+
+/* DETAILS PANEL */
 $fb-details-panel-width: 35rem;
 
 .fb-details-panel {
@@ -641,42 +711,6 @@ $fb-details-panel-width: 35rem;
         }
     }
 }
-
-/* COLUMNS */
-span.avatar {
-    @include flex(0 0 3rem);
-}
-
-.col.name-col {
-    @include flex(1 1 auto);
-}
-
-.col.size-col{
-    @include flex(0 0 18%)
-}
-
-.col.type-col {
-    @include flex(0 0 13%)
-}
-
-.col.date-added-col {
-    @include flex(0 0 22%);
-}
-
-@media (min-width: 1200px) {
-    .col.size-col{
-        @include flex(0 0 20%)
-    }
-
-    .col.type-col{
-        @include flex(0 0 17%)
-    }
-    
-    .col.date-added-col {
-        @include flex(0 0 20%)
-    }
-}
-
 
 /* Need to set on the 'view-body-container' when the file browser is placed within this element. */
 .file-browser-container {
