MEM-164 - Document and Folder Management UI Development
- Added context menu for uncommon actions (scales)
- Fixed an issued with incorrect position of row context menu at smaller viewport dimensions

--- a/modules/core/client/views/dialogs/confirm.html
+++ b/modules/core/client/views/dialogs/confirm.html
@@ -11,7 +11,7 @@
 	
 	<div class="modal-body">
 		{{confirmDlg.confirmText}}		
-		<ul>
+		<ul class="confirm-list">
 			<li ng-repeat="t in confirmDlg.confirmItems">{{t}}</li>
 		</ul>
 	</div>
