--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -10,14 +10,6 @@
 			</li>
 		</ul>
 		<div class="file-batch-actions">
-			
-			<button class="btn icon-btn" title="Add New Folder" 
-					ng-if="project.userCan.createDocument"
-					ng-disabled="!documentMgr.selectedNode"
-					x-document-mgr-add-folder
-					x-project="project"
-					x-root="documentMgr.rootNode"
-					x-node="documentMgr.selectedNode"><span class="glyphicon glyphicon-folder-close"></span></button>
 
 			<button class="btn icon-btn" title="Upload Files" 
 					ng-if="project.userCan.createDocument"
@@ -27,17 +19,6 @@
 					x-root="documentMgr.rootNode"
 					x-node="documentMgr.selectedNode"
 					x-type="'project'"><span class="glyphicon glyphicon-open"></span></button>
-
-			<button class="toggle-details-btn btn icon-btn" title="Show Details" 
-					ng-click="documentMgr.infoPanel.toggle()"><span class="glyphicon glyphicon-info-sign"></span></button>
-
-			<button class="btn icon-btn" title="Rename Folder" 
-					ng-if="project.userCan.createDocument"
-					ng-disabled="documentMgr.checkedDirs.length !== 1"
-					x-document-mgr-rename-folder
-					x-project="project"
-					x-root="documentMgr.rootNode"
-					x-node="documentMgr.checkedDirs[0]"><span class="glyphicon glyphicon-pencil"></span></button>
 
 			<button class="btn icon-btn" title="Delete" 
 					ng-if="project.userCan.createDocument"
@@ -49,6 +30,34 @@
 					x-confirm-text="documentMgr.deleteSelected.confirmText"
 					x-confirm-items="documentMgr.deleteSelected.confirmItems"
 					x-on-ok="documentMgr.deleteSelected.ok"><span class="glyphicon glyphicon-trash"></span></button>
+
+			<button class="toggle-details-btn btn icon-btn" title="Show Details" 
+					ng-click="documentMgr.infoPanel.toggle()"><span class="glyphicon glyphicon-info-sign"></span></button>
+			
+			<div class="btn-group" ng-if="project.userCan.createDocument && documentMgr.checkedDirs.length == 1 || project.userCan.createDocument">
+				<button type="button" class="btn icon-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<span class="glyphicon glyphicon glyphicon-option-vertical"></span>
+				</button>
+				<ul class="dropdown-menu pull-right">
+					<li>
+						<a title="Add New Folder" 
+							ng-if="project.userCan.createDocument"
+							ng-disabled="!documentMgr.selectedNode"
+							x-document-mgr-add-folder
+							x-project="project"
+							x-root="documentMgr.rootNode"
+							x-node="documentMgr.selectedNode"><span class="glyphicon glyphicon-folder-close"></span> Add New Folder</a>
+					</li>
+					<li>
+						<a title="Rename Folder" 
+							ng-if="project.userCan.createDocument && documentMgr.checkedDirs.length == 1"
+							x-document-mgr-rename-folder
+							x-project="project"
+							x-root="documentMgr.rootNode"
+							x-node="documentMgr.checkedDirs[0]"><span class="glyphicon glyphicon-edit"></span> Rename</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
@@ -91,6 +100,9 @@
 						<span>Date Uploaded</span>
 						<span class="sort-icon" ng-show="documentMgr.sorting.column === 'date'"></span>
 					</div>
+					<div class="col status-col">
+						<span>Published</span>
+					</div>
 				</div>
 
 			</div>
@@ -119,6 +131,7 @@
 								<span class="col size-col">---</span>
 								<span class="col type-col">---</span>
 								<span class="col date-added-col">---</span>
+								<span class="col status-col">---</span>
 								<div class="row-actions">
 									
 									<div class="btn-group" ng-if="doc.model.id === documentMgr.lastChecked.directoryID">
@@ -127,8 +140,12 @@
 										</button>
 										<ul class="dropdown-menu pull-right">
 											<li>
-												<button class="btn icon-btn" title="Toggle Details" ng-click="documentMgr.infoPanel.toggle();$event.stopPropagation();">
-													<span class="glyphicon glyphicon-info-sign"></span>
+												<button class="btn icon-btn" title="Edit Folder Details" ng-click="$event.stopPropagation();"
+														x-document-mgr-rename-folder
+														x-project="project"
+														x-root="documentMgr.rootNode"
+														x-node="doc">
+													<span class="glyphicon glyphicon-edit"></span>
 												</button>
 											</li>
 											<li>
@@ -145,12 +162,8 @@
 												</button>
 											</li>
 											<li>
-												<button class="btn icon-btn" title="Edit Folder Details" ng-click="$event.stopPropagation();"
-														x-document-mgr-rename-folder
-														x-project="project"
-														x-root="documentMgr.rootNode"
-														x-node="doc">
-													<span class="glyphicon glyphicon-pencil"></span>
+												<button class="btn icon-btn" title="Toggle Details" ng-click="documentMgr.infoPanel.toggle();$event.stopPropagation();">
+													<span class="glyphicon glyphicon-info-sign"></span>
 												</button>
 											</li>
 										</ul>
@@ -180,6 +193,7 @@
 								<span class="col size-col">{{ doc.internalSize | bytes:2 }}</span>
 								<span class="col type-col">{{ doc.internalExt}}</span>
 								<span class="col date-added-col">{{ doc.dateUploaded | date : format : timezone }}</span>
+								<span class="col status-col">{{ doc.isPublished }}</span>
 								<div class="row-actions" ng-if="doc._id.toString() === documentMgr.lastChecked.fileId">
 									
 									<div class="btn-group">
@@ -187,11 +201,6 @@
 											<span class="glyphicon glyphicon glyphicon-option-vertical" ></span>
 										</button>
 										<ul class="dropdown-menu pull-right">
-											<li>
-												<button class="btn icon-btn" title="Toggle Details" ng-click="documentMgr.infoPanel.toggle();$event.stopPropagation();">
-													<span class="glyphicon glyphicon-info-sign"></span>
-												</button>
-											</li>
 											<li>
 												<button class="btn icon-btn" title="Delete File" ng-click="$event.stopPropagation();"
 														x-confirm-dialog
@@ -203,6 +212,11 @@
 														x-on-ok="documentMgr.deleteFile"
 														x-ok-args="doc">
 													<span class="glyphicon glyphicon-trash"></span>
+												</button>
+											</li>
+											<li>
+												<button class="btn icon-btn" title="Toggle Details" ng-click="documentMgr.infoPanel.toggle();$event.stopPropagation();">
+													<span class="glyphicon glyphicon-info-sign"></span>
 												</button>
 											</li>
 											<!--
