--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -64,7 +64,7 @@
 							x-title-text="'Publish selected'"
 							x-ok-text="documentMgr.publishSelected.okText"
 							x-cancel-text="documentMgr.publishSelected.cancelText"
-							x-confirm-text="'Are you sure you want to publish the selected item(s)?'"
+							x-confirm-text="'Are you sure you want to publish the selected file(s)?'"
 							x-confirm-items="documentMgr.publishSelected.confirmItems"
 							x-on-ok="documentMgr.publishSelected.publish"><span class="glyphicon glyphicon-ok-circle"></span> Publish</a>
 					</li>
@@ -76,7 +76,7 @@
 							x-title-text="'Unpublish selected'"
 							x-ok-text="documentMgr.publishSelected.okText"
 							x-cancel-text="documentMgr.publishSelected.cancelText"
-							x-confirm-text="'Are you sure you want to unpublish the selected item(s)?'"
+							x-confirm-text="'Are you sure you want to unpublish the selected file(s)?'"
 							x-confirm-items="documentMgr.publishSelected.confirmItems"
 							x-on-ok="documentMgr.publishSelected.unpublish"><span class="glyphicon glyphicon-ban-circle"></span> Unpublish</a>
 					</li>
@@ -239,7 +239,7 @@
 														x-title-text="'Publish File'"
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
-														x-confirm-text="'Are you sure you want to publish this file?'"
+														x-confirm-text="'Are you sure you want to publish the selected file?'"
 														x-confirm-items="[doc.documentFileName]"
 														x-on-ok="documentMgr.publishFile"
 														x-ok-args="doc">
@@ -252,7 +252,7 @@
 														x-title-text="'Unpublish File'"
 														x-ok-text="'Yes'"
 														x-cancel-text="'No'"
-														x-confirm-text="'Are you sure you want to unpublish this file?'"
+														x-confirm-text="'Are you sure you want to unpublish the selected file?'"
 														x-confirm-items="[doc.documentFileName]"
 														x-on-ok="documentMgr.unpublishFile"
 														x-ok-args="doc">
