MEM-164 - Document UI Development
- Added -moz prefix as per lint's instructions :|

--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -883,6 +883,7 @@ $fb-upload-target-border: 2px dashed #BBB;
         &.open {
             .dropdown-toggle {
                 -webkit-box-shadow: none;
+                -moz-box-shadow: none;
                 box-shadow: none;
                 border: 1px solid #DDD;
             }
