MEM-164 - Document UI Development
- Fixed some inconsistent naming conventions for the publish/unpublish dialog titles

--- a/modules/core/client/views/dialogs/info.html
+++ b/modules/core/client/views/dialogs/info.html
@@ -15,6 +15,6 @@
 	</div>
 
 	<div class="modal-footer">
-		<button class="btn btn-primary" type="submit">Close</button>
+		<button class="btn btn-default" type="submit">OK</button>
 	</div>
 </form>
