MEM-164: fix ng-repeat and string array bug.

--- a/modules/core/client/views/dialogs/confirm.html
+++ b/modules/core/client/views/dialogs/confirm.html
@@ -12,7 +12,7 @@
 	<div class="modal-body">
 		{{confirmDlg.confirmText}}		
 		<ul class="confirm-list">
-			<li ng-repeat="t in confirmDlg.confirmItems">{{t}}</li>
+			<li ng-repeat="t in confirmDlg.confirmItems">{{t.value}}</li>
 		</ul>
 	</div>
 
