--- a/modules/core/client/views/dialogs/info.html
+++ b/modules/core/client/views/dialogs/info.html
@@ -10,7 +10,7 @@
 	<div class="modal-body">
 		{{infoDlg.messageText}}
 		<ul class="confirm-list">
-			<li ng-repeat="t in infoDlg.items">{{t}}</li>
+			<li ng-repeat="t in infoDlg.items">{{t.value}}</li>
 		</ul>
 	</div>
 
